disunity-derive/tests/05-invalid-variant-discriminant.stderr
error[E0308]: mismatched types
 --> tests/05-invalid-variant-discriminant.rs:5:31
  |
5 |     #[disunity(discriminant = "nonsense")]
  |                               ^^^^^^^^^^ expected `isize`, found `&str`
